tests/baselines/reference/parserMissingLambdaOpenBrace1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserMissingLambdaOpenBrace1.ts (5 errors) ====
    class C {
        where(filter: Iterator<T, boolean>): Query<T> {
                      ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Iterator'.
                                             ~~~~~~~~
!!! error TS2304: Cannot find name 'Query'.
            return fromDoWhile(test =>
                   ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'fromDoWhile'.
                var index = 0;
                ~~~
!!! error TS1005: '{' expected.
                return this.doWhile((item, i) => filter(item, i) ? test(item, index++) : true);
                            ~~~~~~~
!!! error TS2339: Property 'doWhile' does not exist on type 'C'.
            });
        }
    }